--- a/car-workshop/report/cw_admission_sheet_templates.xml
+++ b/car-workshop/report/cw_admission_sheet_templates.xml
@@ -8,15 +8,20 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
+                        <!--Estilos-->
+                        <t t-call="car-workshop.cw_report_style"/>
                         <!--HEAD cw_head_templates.xml-->
                         <!--INI CABECERA-->
                         <t t-call="car-workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
                         <!--FIN CABECERA-->
                         <br/>
+                        <br/>
+                        <br/>
                         <h2>
                             Hoja de Admisión #
                             <span t-field="o.name"/>
                         </h2>
+                        <br/>
                         <br/>
                         <div id="repair data">
                             <table style="width:100%">
@@ -35,6 +40,7 @@
                                     </td>
                                 </tr>
                             </table>
+                            <br/>
                             <br/>
                             <br/>
                             <div>
