--- a/car-workshop/report/cw_quotation_templates.xml
+++ b/car-workshop/report/cw_quotation_templates.xml
@@ -8,7 +8,12 @@
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
                     <div class="page">
+                        <!--Estilos-->
+                        <t t-call="car-workshop.cw_report_style"/>
+                        <!--HEAD cw_head_templates.xml-->
+                        <!--INI CABECERA-->
                         <t t-call="car-workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
+                        <!--FIN CABECERA-->
                         <br/>
                         <h2>
                             PRESUPUESTO #
