[FIX] Nombre presupuesto [ADD] filtro nombre ord reparación

--- a/car-workshop/report/cw_quotation_templates.xml
+++ b/car-workshop/report/cw_quotation_templates.xml
@@ -17,7 +17,7 @@
                         <br/>
                         <h2>
                             PRESUPUESTO #
-                            <span t-field="doc.name"/>
+                            <span t-field="doc.sale_order_id.name"/>
                         </h2>
                         <br/>
                         <div class="row mt32 mb32" id="informations">
