--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -531,6 +531,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="repair_title"/>
+                    <field name="name"/>
                     <field name="partner_id"/>
                     <field name="vehicle_id"/>
                     <field name="user_id"/>
